objects/Mentor__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mentors</relationshipLabel>
        <relationshipName>Mentors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Number_of_Mentees__c</fullName>
        <inlineHelpText>Number of mentees this user is already mentoring</inlineHelpText>
        <label>Current Number of Mentees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mentorship_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentorship Request</label>
        <referenceTo>Mentorship_Request__c</referenceTo>
        <relationshipLabel>Mentors</relationshipLabel>
        <relationshipName>Mentors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mentors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mentor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>